GPencil: Triangle uv's missing in RNA #78024

Closed
opened 2020-06-19 01:06:03 +02:00 by Ian Hsieh · 7 comments

System Information
Operating system: macOS 10.14.6
Graphics card: Intel HD Graphics 6000

Blender Version
Broken: 2.83
Worked: 2.82

I posted this on the devtalk forum, but I didn't get a reply, so I'm going to assume this is a bug or a regression. 😄

In version 2.82, for grease pencil fills, GPencilTriangle used to contain the UV's for the points on the triangle. However, access to the UV's seems to have been removed in 2.83 and I have not been able to figure out a workaround.

Steps to reproduce:

  1. Create a new scene
  2. Add -> Grease Pencil -> Suzanne
  3. Open the Python Console.
  4. In the Python Console:
ob = bpy.data.objects['Suzanne']
gp = ob.data
strokes = layer.active_frame.strokes
s = strokes[0]
t = s.triangles[0]
print('uv1: (%f, %f) uv2: (%f, %f) uv3: (%f, %f) \n' % (t.uv1[0], t.uv1[1], t.uv2[0], t.uv2[1], t.uv3[0], t.uv3[1]))

This worked in 2.82. The last line will error out in 2.83 because uv1, uv2, and uv3 members no longer exists.

**System Information** Operating system: macOS 10.14.6 Graphics card: Intel HD Graphics 6000 **Blender Version** Broken: 2.83 Worked: 2.82 I posted this on the devtalk forum, but I didn't get a reply, so I'm going to assume this is a bug or a regression. 😄 In version 2.82, for grease pencil fills, GPencilTriangle used to contain the UV's for the points on the triangle. However, access to the UV's seems to have been removed in 2.83 and I have not been able to figure out a workaround. Steps to reproduce: 1. Create a new scene 2. Add -> Grease Pencil -> Suzanne 3. Open the Python Console. 4. In the Python Console: ``` ob = bpy.data.objects['Suzanne'] gp = ob.data strokes = layer.active_frame.strokes s = strokes[0] t = s.triangles[0] print('uv1: (%f, %f) uv2: (%f, %f) uv3: (%f, %f) \n' % (t.uv1[0], t.uv1[1], t.uv2[0], t.uv2[1], t.uv3[0], t.uv3[1])) ``` This worked in 2.82. The last line will error out in 2.83 because uv1, uv2, and uv3 members no longer exists.
Author

Added subscriber: @ianhsieh

Added subscriber: @ianhsieh
Antonio Vazquez self-assigned this 2020-06-19 10:14:41 +02:00
Antonio Vazquez changed title from GPencilTriangle uv's missing to GPencil: Triangle uv's missing in RNA 2020-06-19 10:15:00 +02:00

This issue was referenced by f382109f38

This issue was referenced by f382109f3885fc48d7becc526796d3324ab0aa42

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

This was changed in the refactor done in 2.83 and we miss to include it again.

I have included the prop again and now this prop is here:

image.png

This was changed in the refactor done in `2.83` and we miss to include it again. I have included the prop again and now this prop is here: ![image.png](https://archive.blender.org/developer/F8631862/image.png)
Author

Thanks for the quick turnaround, Antonio! I just tried it in 2.90 daily build and it seems to be working for me. Will this change eventually be pushed into the 2.83 LTS?

Thanks for the quick turnaround, Antonio! I just tried it in 2.90 daily build and it seems to be working for me. Will this change eventually be pushed into the 2.83 LTS?

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

@ianhsieh Not sure about 2.83 because in theory no API change in LTS.

@Jeroen-Bakker Do you think this could be included in 2.83 LTS update as a bug fixing? really it not a change, it's a missing prop.

@ianhsieh Not sure about 2.83 because in theory no API change in LTS. @Jeroen-Bakker Do you think this could be included in 2.83 LTS update as a bug fixing? really it not a change, it's a missing prop.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78024
No description provided.