Fix T78024: GPencil - Add missing UV Fill prop to RNA

This was changed in the refactor done in 2.83 and was not included by error.